@@ -5,6 +5,7 @@
 - Update phpCAS using composer
 - Replace deprecated mcrypt functions with openssl functions
 - Fix an error in the calculation of hours of absence
+- Hide empty lines in the weekly view when Planning-lignesVides is enabled
 
 *** Version 2.8.03         (12 septembre 2018)   ***
 - Correction
